--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "express": "^4.18.1",
     "fs-extra": "^11.1.1",
     "jsonwebtoken": "^8.5.1",
+    "localstorage": "^1.0.1",
     "mongoose": "^6.5.4",
     "multer": "^1.4.5-lts.1",
+    "node-localstorage": "^2.2.1",
     "nodemon": "^2.0.19",
     "validator": "^13.7.0"
   }
